# workbuddy-rag-memory

./: .env.example  .gitignore  Dockerfile  INSTALL.md  LICENSE  Makefile  README.md  docker-compose.yml  download_bge_m3.py  download_bge_reranker.py  download_bge_v2.py  make.py  push_to_github.py  push_to_github.sh  pyproject.toml  requirements.txt  run.bat  run_daemon.py
.github/workflows/: ci.yml
data/: eval_baseline.md  eval_clean.md  eval_final.md  eval_report.md  eval_rerank.md  eval_rerank_batched.md  eval_trigram.md  eval_trigram2.md  gold_set.jsonl  seed_memory.md
docs/: API.md  STATUS-2026-06-20.md
docs/skills/: rag-search-skill.md
scripts/: __init__.py  _logging.py  dedup_noise.py  demo_integration.py  distill.py  eval.py  health.py  ingest.py  ingest_wb_memory.py  ingest_wb_memory_oneshot.py  inject_distilled_to_memory.py  install_bootstrap.py  install_distill_cron.py  install_skills.py  query.py  rebuild_fts.py  reclassify_unknown.py  server.py
skills/: README.md
skills/rag_search/: SKILL.md  main.py  worker.py
src/: __init__.py  chunker.py  config.py  dedup.py  embedder.py  hyde.py  indexer.py  memory.py  reranker.py  retriever.py
stage2/: README.md
tests/: __init__.py  test_bootstrap.py  test_chunk_raw_json.py  test_chunker.py  test_chunker_guard.py  test_config.py  test_decay_integration.py  test_dedup.py  test_distill_fallback.py  test_health.py  test_hyde.py  test_hyde_integration.py  test_inject_distilled_to_memory.py  test_integration.py  test_reranker_e2e.py  test_server.py
